# hx_quant

./: .gitignore  LICENSE  README.md  alert_monitor_gui.py  hx_quant.code-workspace  main.py  pyproject.toml  run_monitor.py  setup.py
alerts/: alerts_runner.py  test_alert.py  turnover_alert.py
examples/: continuous_buy_alert_demo.py
gui/: alert_monitor.py  run_alert_monitor.py
strategies/: macd_strategy.py
tests/: test_alerts_runner.py  test_continuous_buy_detection.py  test_turnover_alert.py
