[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hx-quant"
version = "0.1.0"
description = "A comprehensive quantitative trading framework for algorithmic trading and backtesting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gauss Cheng", email = "GuoXing.Cheng@hxcul.cn"}
]
maintainers = [
    {name = "Gauss Cheng", email = "GuoXing.Cheng@hxcul.cn"}
]
keywords = [
    "quantitative-trading",
]

requires-python = ">=3.8"
dependencies = [
    "vnpy",
    "mootdx",
    "cn_stock_holidays",
    "vnpy_tdx"
]



[project.urls]
Homepage = "https://github.com/hxquant/hx-quant"
Documentation = "https://hx-quant.readthedocs.io/"
Repository = "https://github.com/hxquant/hx-quant.git"
"Bug Tracker" = "https://github.com/hxquant/hx-quant/issues"
Changelog = "https://github.com/hxquant/hx-quant/blob/main/CHANGELOG.md"

[project.scripts]
hx-quant = "hx_quant.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hx_quant*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
hx_quant = ["data/*.json", "config/*.yaml", "templates/*.html"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["hx_quant"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true


ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "data: marks tests that require data files",
    "network: marks tests that require network access",
]

[tool.coverage.run]
source = ["hx_quant"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]